@@ -1,21 +1,20 @@
 package com.filmticket.util;
 
-import com.filmticket.entity.Booking;
-import com.filmticket.entity.Seat;
-import com.filmticket.entity.Showtime;
-import com.filmticket.entity.Ticket;
-import com.lowagie.text.Image;
-import com.lowagie.text.Rectangle;
+import com.filmticket.entity.*;
+import com.filmticket.repository.*;
 import com.lowagie.text.Document;
 import com.lowagie.text.Element;
 import com.lowagie.text.PageSize;
 import com.lowagie.text.Paragraph;
 import com.lowagie.text.Phrase;
 import com.lowagie.text.Chunk;
-import com.lowagie.text.Font;
+import com.lowagie.text.Rectangle;
+import com.lowagie.text.Image;
 import com.lowagie.text.pdf.PdfPCell;
 import com.lowagie.text.pdf.PdfPTable;
 import com.lowagie.text.pdf.PdfWriter;
+import lombok.RequiredArgsConstructor;
+import org.springframework.stereotype.Component;
 
 import javax.imageio.ImageIO;
 import java.awt.*;
@@ -24,19 +23,24 @@ import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
 import java.math.BigDecimal;
 import java.math.RoundingMode;
+import java.net.URI;
 import java.text.NumberFormat;
 import java.time.format.DateTimeFormatter;
-import java.util.Locale;
-import java.net.URL;
 import java.util.Base64;
 import java.util.List;
-import java.util.UUID;
+import java.util.Locale;
 
+@Component
+@RequiredArgsConstructor
 public class TicketPdfGenerator {
 
     private static final DateTimeFormatter DATE_TIME_FORMATTER = DateTimeFormatter.ofPattern("dd/MM/yyyy HH:mm");
 
-    public static byte[] generateTicketPdf(Booking booking, List<Ticket> tickets) throws Exception {
+    private final ShowtimeRepository showtimeRepository;
+    private final MovieRepository movieRepository;
+    private final CinemaRoomRepository cinemaRoomRepository;
+
+    public byte[] generateTicketPdf(Booking booking, List<Ticket> tickets) throws Exception {
         Document document = new Document(PageSize.A4, 40, 40, 40, 40);
         ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
         PdfWriter.getInstance(document, outputStream);
@@ -52,13 +56,13 @@ public class TicketPdfGenerator {
         return outputStream.toByteArray();
     }
 
-    private static void addBrandHeader(Document document, Booking booking) throws Exception {
+    private void addBrandHeader(Document document, Booking booking) throws Exception {
         Paragraph paragraph = new Paragraph("VE XEM PHIM", createHeaderFont());
         paragraph.setAlignment(Element.ALIGN_CENTER);
         paragraph.setSpacingAfter(6);
         document.add(paragraph);
 
-        String title = booking.getShowtime().getMovie().getTitle();
+        String title = getMovieTitle(booking);
         Paragraph movieTitle = new Paragraph(title, createSubHeaderFont());
         movieTitle.setAlignment(Element.ALIGN_CENTER);
         movieTitle.setSpacingAfter(10);
@@ -67,8 +71,24 @@ public class TicketPdfGenerator {
         addPoster(document, booking);
     }
 
-    private static void addPoster(Document document, Booking booking) throws Exception {
-        String posterUrl = booking.getShowtime().getMovie().getPosterUrl();
+    private String getMovieTitle(Booking booking) {
+        return showtimeRepository.findById(booking.getShowtimeId())
+                .map(s -> movieRepository.findById(s.getMovieId())
+                        .map(Movie::getTitle)
+                        .orElse("Phim"))
+                .orElse("Phim");
+    }
+
+    private String getMoviePosterUrl(Booking booking) {
+        return showtimeRepository.findById(booking.getShowtimeId())
+                .map(s -> movieRepository.findById(s.getMovieId())
+                        .map(Movie::getPosterUrl)
+                        .orElse(null))
+                .orElse(null);
+    }
+
+    private void addPoster(Document document, Booking booking) throws Exception {
+        String posterUrl = getMoviePosterUrl(booking);
         if (posterUrl == null || posterUrl.isBlank()) {
             return;
         }
@@ -78,7 +98,7 @@ public class TicketPdfGenerator {
             String base64 = posterUrl.substring(posterUrl.indexOf(",") + 1);
             posterImage = ImageIO.read(new ByteArrayInputStream(Base64.getDecoder().decode(base64)));
         } else {
-            posterImage = ImageIO.read(new URL(posterUrl));
+            posterImage = ImageIO.read(new URI(posterUrl).toURL());
         }
 
         if (posterImage == null) {
@@ -95,7 +115,7 @@ public class TicketPdfGenerator {
         document.add(Chunk.NEWLINE);
     }
 
-    private static BufferedImage resizeAndFrame(BufferedImage source, int maxWidth, int maxHeight) {
+    private BufferedImage resizeAndFrame(BufferedImage source, int maxWidth, int maxHeight) {
         int width = Math.min(source.getWidth(), maxWidth);
         int height = Math.min(source.getHeight(), maxHeight);
         BufferedImage resized = new BufferedImage(width, height, BufferedImage.TYPE_INT_RGB);
@@ -108,30 +128,41 @@ public class TicketPdfGenerator {
         return resized;
     }
 
-    private static void addMetaTable(Document document, Booking booking) throws Exception {
-        Showtime showtime = booking.getShowtime();
+    private void addMetaTable(Document document, Booking booking) throws Exception {
+        String cinemaName = "Rap";
+        String showtimeStr = "";
+
+        Showtime s = showtimeRepository.findById(booking.getShowtimeId()).orElse(null);
+        if (s != null) {
+            CinemaRoom room = cinemaRoomRepository.findById(s.getCinemaRoomId()).orElse(null);
+            if (room != null) {
+                cinemaName = room.getName();
+            }
+            showtimeStr = s.getStartTime().format(DATE_TIME_FORMATTER);
+        }
+
         PdfPTable table = new PdfPTable(2);
         table.setWidthPercentage(100);
-        table.setWidths(new float[]{1.2f, 2.8f});
+        table.setWidths(new float[] { 1.2f, 2.8f });
         table.setSpacingBefore(10);
         table.setSpacingAfter(10);
         table.getDefaultCell().setBorder(Rectangle.NO_BORDER);
         table.getDefaultCell().setPadding(5);
 
         table.addCell(createLabelCell("RAP"));
-        table.addCell(createValueCell(showtime.getCinemaRoom().getName()));
+        table.addCell(createValueCell(cinemaName));
         table.addCell(createLabelCell("SUAT CHIEU"));
-        table.addCell(createValueCell(showtime.getStartTime().format(DATE_TIME_FORMATTER)));
+        table.addCell(createValueCell(showtimeStr));
         table.addCell(createLabelCell("MA DAT VE"));
         table.addCell(createValueCell(booking.getConfirmationCode()));
 
         document.add(table);
     }
 
-    private static void addTicketTable(Document document, Booking booking, List<Ticket> tickets) throws Exception {
+    private void addTicketTable(Document document, Booking booking, List<Ticket> tickets) throws Exception {
         PdfPTable table = new PdfPTable(4);
         table.setWidthPercentage(100);
-        table.setWidths(new float[]{0.8f, 1.2f, 1.8f, 1.2f});
+        table.setWidths(new float[] { 0.8f, 1.2f, 1.8f, 1.2f });
         table.setSpacingBefore(4);
         table.setSpacingAfter(10);
 
@@ -142,12 +173,12 @@ public class TicketPdfGenerator {
 
         for (int i = 0; i < tickets.size(); i++) {
             Ticket ticket = tickets.get(i);
-            Seat seat = findSeat(booking, ticket.getSeatId());
+            String seatInfo = ticket.getSeatId().toString();
 
             table.addCell(createDataCell(String.valueOf(i + 1)));
-            table.addCell(createDataCell(seat != null ? (seat.getRowName() + seat.getSeatNumber()) : ticket.getSeatId().toString()));
+            table.addCell(createDataCell(seatInfo));
             table.addCell(createDataCell(ticket.getTicketCode()));
-            table.addCell(createDataCell(seat != null ? seat.getType().toDisplayValue() : "Thuong"));
+            table.addCell(createDataCell("Thuong"));
 
             if (i == 0) {
                 table.setHeaderRows(1);
@@ -157,13 +188,13 @@ public class TicketPdfGenerator {
         document.add(table);
     }
 
-    private static void addAmountTable(Document document, Booking booking) throws Exception {
+    private void addAmountTable(Document document, Booking booking) throws Exception {
         BigDecimal discountAmount = BigDecimal.ZERO;
         BigDecimal finalAmount = booking.getTotalAmount();
 
         PdfPTable table = new PdfPTable(2);
         table.setWidthPercentage(100);
-        table.setWidths(new float[]{2.6f, 1.4f});
+        table.setWidths(new float[] { 2.6f, 1.4f });
         table.setSpacingBefore(8);
         table.setSpacingAfter(14);
         table.getDefaultCell().setBorder(Rectangle.NO_BORDER);
@@ -185,7 +216,7 @@ public class TicketPdfGenerator {
         document.add(table);
     }
 
-    private static void addQrSection(Document document, String payload) throws Exception {
+    private void addQrSection(Document document, String payload) throws Exception {
         String qrBase64 = TicketQrGenerator.generateQrBase64(payload, 200);
         byte[] qrBytes = Base64.getDecoder().decode(qrBase64);
         Image image = Image.getInstance(qrBytes);
@@ -202,42 +233,38 @@ public class TicketPdfGenerator {
         document.add(paragraph);
     }
 
-    private static Seat findSeat(Booking booking, UUID seatId) {
-        if (booking.getBookingSeats() == null) {
-            return null;
-        }
-        return booking.getBookingSeats().stream()
-                .filter(bs -> bs.getSeat().getId().equals(seatId))
-                .map(bs -> bs.getSeat())
-                .findFirst()
-                .orElse(null);
-    }
-
-    private static String formatMoney(BigDecimal value) {
-        BigDecimal rounded = value.setScale(0, RoundingMode.HALF_UP);
-        NumberFormat format = NumberFormat.getNumberInstance(new Locale("vi", "VN"));
-        format.setMaximumFractionDigits(0);
-        format.setMinimumFractionDigits(0);
-        return format.format(rounded);
-    }
-
-    private static String buildTicketPayload(Booking booking, List<Ticket> tickets) {
+    private String buildTicketPayload(Booking booking, List<Ticket> tickets) {
         StringBuilder builder = new StringBuilder();
         builder.append("TICKET|");
         builder.append(booking.getConfirmationCode()).append("|");
-        builder.append(booking.getShowtime().getMovie().getTitle()).append("|");
-        builder.append(booking.getShowtime().getStartTime().format(DATE_TIME_FORMATTER)).append("|");
-        builder.append(booking.getShowtime().getCinemaRoom().getName()).append("|");
+        builder.append(getMovieTitle(booking)).append("|");
+
+        Showtime s = showtimeRepository.findById(booking.getShowtimeId()).orElse(null);
+        if (s != null) {
+            builder.append(s.getStartTime().format(DATE_TIME_FORMATTER)).append("|");
+            CinemaRoom room = cinemaRoomRepository.findById(s.getCinemaRoomId()).orElse(null);
+            builder.append(room != null ? room.getName() : "Rap").append("|");
+        } else {
+            builder.append("|");
+        }
+
         for (int i = 0; i < tickets.size(); i++) {
             Ticket ticket = tickets.get(i);
-            Seat seat = findSeat(booking, ticket.getSeatId());
             builder.append(ticket.getTicketCode()).append("=");
-            builder.append(seat != null ? (seat.getRowName() + seat.getSeatNumber()) : ticket.getSeatId().toString());
+            builder.append(ticket.getSeatId().toString());
             if (i < tickets.size() - 1) {
                 builder.append(";");
             }
         }
         return builder.toString();
+    }
+
+    private String formatMoney(BigDecimal value) {
+        BigDecimal rounded = value.setScale(0, RoundingMode.HALF_UP);
+        NumberFormat format = NumberFormat.getNumberInstance(Locale.forLanguageTag("vi-VN"));
+        format.setMaximumFractionDigits(0);
+        format.setMinimumFractionDigits(0);
+        return format.format(rounded);
     }
 
     private static PdfPCell createHeaderCell(String text) {
@@ -278,22 +305,27 @@ public class TicketPdfGenerator {
     }
 
     private static com.lowagie.text.Font createHeaderFont() {
-        return new com.lowagie.text.Font(com.lowagie.text.Font.HELVETICA, 18, com.lowagie.text.Font.BOLD, new Color(15, 30, 70));
+        return new com.lowagie.text.Font(com.lowagie.text.Font.HELVETICA, 18, com.lowagie.text.Font.BOLD,
+                new Color(15, 30, 70));
     }
 
     private static com.lowagie.text.Font createSubHeaderFont() {
-        return new com.lowagie.text.Font(com.lowagie.text.Font.HELVETICA, 13, com.lowagie.text.Font.BOLD, new Color(45, 45, 45));
+        return new com.lowagie.text.Font(com.lowagie.text.Font.HELVETICA, 13, com.lowagie.text.Font.BOLD,
+                new Color(45, 45, 45));
     }
 
     private static com.lowagie.text.Font createLabelFont() {
-        return new com.lowagie.text.Font(com.lowagie.text.Font.HELVETICA, 11, com.lowagie.text.Font.BOLD, new Color(90, 90, 100));
+        return new com.lowagie.text.Font(com.lowagie.text.Font.HELVETICA, 11, com.lowagie.text.Font.BOLD,
+                new Color(90, 90, 100));
     }
 
     private static com.lowagie.text.Font createInfoFont() {
-        return new com.lowagie.text.Font(com.lowagie.text.Font.HELVETICA, 11, com.lowagie.text.Font.NORMAL, new Color(50, 50, 55));
+        return new com.lowagie.text.Font(com.lowagie.text.Font.HELVETICA, 11, com.lowagie.text.Font.NORMAL,
+                new Color(50, 50, 55));
     }
 
     private static com.lowagie.text.Font createHighlightFont() {
-        return new com.lowagie.text.Font(com.lowagie.text.Font.HELVETICA, 12, com.lowagie.text.Font.BOLD, new Color(200, 45, 60));
+        return new com.lowagie.text.Font(com.lowagie.text.Font.HELVETICA, 12, com.lowagie.text.Font.BOLD,
+                new Color(200, 45, 60));
     }
 }
